Rigid Body can't be created for objects with linked mesh #38112

Closed
opened 2014-01-08 01:32:28 +01:00 by Dalai Felinto · 7 comments

System Information
Linux

Blender Version
Broken: 2.69.7 7647a2b751

Short description of error
I can't add a rigid body object to an object that has a mesh that doesn't belong to the scene.

Exact steps for others to reproduce the error
1 Save the default file as cube.blend
2 Open Blender again, and link in the Cube mesh from cube.blend
3 Create a new object (or select the existing Cube of the new scene) and change its mesh to use the "L Cube" mesh.
4 Go to the Physics panel and the add rigid body button will be grayed out

**System Information** Linux **Blender Version** Broken: 2.69.7 7647a2b751d4 **Short description of error** I can't add a rigid body object to an object that has a mesh that doesn't belong to the scene. **Exact steps for others to reproduce the error** 1 Save the default file as cube.blend 2 Open Blender again, and link in the Cube mesh from cube.blend 3 Create a new object (or select the existing Cube of the new scene) and change its mesh to use the "L Cube" mesh. 4 Go to the Physics panel and the add rigid body button will be grayed out
Author
Owner

Changed status to: 'Open'

Changed status to: 'Open'
Sergej Reich was assigned by Dalai Felinto 2014-01-08 01:32:28 +01:00
Author
Owner

Added subscriber: @dfelinto

Added subscriber: @dfelinto
Author
Owner

Added subscriber: @BenoitBolsee

Added subscriber: @BenoitBolsee

This issue was referenced by blender/blender-addons-contrib@3739f53a6e

This issue was referenced by blender/blender-addons-contrib@3739f53a6e2ea7e643cd9630f999b9c7503110e3

This issue was referenced by 3739f53a6e

This issue was referenced by 3739f53a6e2ea7e643cd9630f999b9c7503110e3

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 3739f53a6e.

Closed by commit 3739f53a6e.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38112
No description provided.