Fix T38112: Rigid Body can't be created for objects with linked mesh

Make poll function for rigid body add operators less strict.